Seeking troubles on large WebM files in Safari on mac and iOS https://bugs.webkit.org/show_bug.cgi?id=272095 rdar://125867488

Reviewed by Jer Noble.

We relied on the AVSampleBufferRenderSynchronizer to perform the seek and wait.
It doesn't always behave as expected. So instead we use a NativePromise that will
be resolved once we have demuxed data at the seek location and wait to continue the seek operation.

* LayoutTests/http/tests/media/video-webm-stall-seek-expected.txt: Added.
* LayoutTests/http/tests/media/video-webm-stall-seek.html: Added.
* LayoutTests/platform/glib/TestExpectations: Add failure expectation webkit.org/b/282165
* Source/WebCore/platform/graphics/cocoa/MediaPlayerPrivateWebM.h:
* Source/WebCore/platform/graphics/cocoa/MediaPlayerPrivateWebM.mm:
(WebCore::MediaPlayerPrivateWebM::~MediaPlayerPrivateWebM):
(WebCore::MediaPlayerPrivateWebM::seekInternal):
(WebCore::MediaPlayerPrivateWebM::seekTo):
(WebCore::MediaPlayerPrivateWebM::appendCompleted):

Canonical link: https://commits.webkit.org/285986@main